# joyboy-dns

./: Cargo.toml
src/: main.rs  utils.rs
src/structs/: dns_flags.rs  dns_header.rs  dns_packet.rs  dns_packet_buffer.rs  dns_question.rs  dns_record_types.rs  dns_resource_record.rs  error.rs
src/structs/record_types/: a_record.rs  aaaa_record.rs  cname_record.rs  mx_record.rs  ns_record.rs  ptr_record.rs  soa_record.rs  srv_record.rs  txt_record.rs
